--- a/frontend/src/Components/movies.Module.css
+++ b/frontend/src/Components/movies.Module.css
@@ -1,15 +1,21 @@
 .bg {
     background-color: black;
     padding-left: 2rem;
-    display: flex;
 
+}
+.video {
+    display: flex;
 }
 
 .right {
-    flex: 1;
+    width: 60%;
+    /* border: 1px solid red; */
 }
 
 .left {
-    flex: 1;
-    height: 500px;
+    width: 40%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid red; */
 }
