--- a/frontend/src/Style/payment.module.css
+++ b/frontend/src/Style/payment.module.css
@@ -123,10 +123,7 @@
     color: rgb(67, 196, 147);
     border-radius: 5px;
 }
-.firstpart>button:nth-last-child(){
-    background-color: azure;
-}
-.firstpart>button:hover{
+firstpart>button:hover{
     background-color: rgb(255,255,255);
     color: rgb(67, 196, 147);
     border-radius: 5px;
@@ -146,7 +143,6 @@
 .secpart>input{
     width: 60%;
     height: 50px;
-    margin-left: -160px;
 }
 .user>h1{
     color: wheat;
