--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
   /* text-align: center; */
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
@@ -49,7 +52,7 @@ background-color: black !important;
 }
 
 .pincode {
-  
+  margin-left: 34rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -112,3 +115,23 @@ background-color: black !important;
   color:white;
   /* border: 1px solid white; */
 }
+
+@media screen and (max-width: 900px) {
+  .pincode {
+    margin-left: 22rem;
+  }
+}
+
+
+@media screen and (max-width: 700px) {
+  .pincode {
+    margin-left: 16rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .pincode {
+    margin-left: 10rem;
+  }
+}
+
