--- a/frontend/src/Style/LatestTest.module.css
+++ b/frontend/src/Style/LatestTest.module.css
@@ -11,12 +11,13 @@
 .latest {
   /* height: 5%; */
   width: 20%;
-  /* border: 1px solid black; */
+  /* border: 1px solid red; */
   font-weight: bold;
   font-size: 20px;
-  margin-right: 2rem;
+  /* margin-left: 0.2rem; */
   margin-bottom: 3rem;
   margin-top: 1rem;
+  padding-left: 0.3rem;
   color: white;
   background-color: black;
   border-radius: 2%;
@@ -26,9 +27,10 @@
   /* border: 1px solid black; */
   font-weight: bold;
   font-size: 22px;
-  margin-left: -2rem;
+  /* margin-left: -2rem; */
   margin-bottom: 2.5rem;
   margin-top: 1rem;
+  padding-left: 0.3rem;
   color: white;
   background-color: black;
   border-radius: 2%;
@@ -49,8 +51,9 @@
   /* border: 1px solid black; */
   font-weight: bold;
   font-size: 22px;
-  margin-left: -2rem;
+  /* margin-left: -2rem; */
   margin-bottom: 2.5rem;
+  padding-left: 0.3rem;
   margin-top: 1rem;
   color: white;
   background-color: black;
@@ -62,8 +65,9 @@
   /* border: 1px solid black; */
   font-weight: bold;
   font-size: 22px;
-  margin-left: -1rem;
+  /* margin-left: -1rem; */
   margin-bottom: 2.5rem;
+  padding-left: 0.3rem;
   margin-top: 1rem;
   color: white;
   background-color: black;
@@ -194,3 +198,5 @@
 .movies {
   color: white;
 }
+
+
